Sat Oct  6 12:41:37 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed bug #61627
	* tests/docs/Makefile.am tests/docs/bug-64.xml
	  tests/general/Makefile.am tests/general/bug-64.*: added a 
	  specific example in the regression tests
	* tests/docs/Makefile.am tests/docs/bug-63.xml
	  tests/general/Makefile.am tests/general/bug-63.*: added a 
	  specific example in the regression tests for bug #61291
	  (fixed in libxml2 module)
	* tests/reports/Makefile.am tests/reports/undefvar.*: added
	  a test for handling undefined variables

Thu Oct  4 15:49:57 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in xslt-config.in: trying to fix bug #60890

Thu Oct  4 15:28:25 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: applied patch to close bug #60724

Tue Oct  2 21:38:23 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/date.c: applied patch from Charlie Bozeman that fixes
	  a bug in DAY_IN_WEEK and implements the date:week-in-month function

Tue Oct  2 17:11:15 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.[ch] tests/extensions/list.*
	  tests/extensions/evaluate.*: applied patch from Darren Graves
	  adding support for Saxon's evaluate & expression extension functions
	  http://users.iclway.co.uk/mhkay/saxon/saxon6.3/extensions.html

Mon Oct  1 17:18:32 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltwin32config.h.in win32/dsp/libexslt_*.dsp: applied
	  patches from Igor for Windows.

Tue Sep 18 11:48:20 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: fixed bug #60624
	* libxslt/xsltutils.c: improver the error context reporting
	* tests/reports/Makefile.am tests/reports/tst-2.*: added a
	  specific regression test
	* xsltproc/xsltproc: free the stylesheet if it contained an error.

Mon Sep 17 14:45:48 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixed a problem with global var override
	  being reported as an error.