@@ -69,6 +69,7 @@ EXTRA_DIST = \
     bug-62.out bug-62.xsl \
     bug-63.out bug-63.xsl \
     bug-64.out bug-64.xsl \
+    bug-65.ent bug-65.out bug-65.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
