@@ -1,3 +1,10 @@
+Sat Oct  6 15:10:16 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/variables.c: fixing bug #61673 part II
+	* tests/docs/Makefile.am tests/docs/bug-65.xml
+	  tests/general/Makefile.am tests/general/bug-65.*: added a 
+	  specific example in the regression tests
+
 Sat Oct  6 12:41:37 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/pattern.c: fixed bug #61627
